      local database is locked.  A useful error message is now
      produced. (CNY-1175)
    * "cvc annotate" now attributes the correct name to the person who
      committed the initial revision of a file. (CNY-1066)
    * "conary updateall --help" no longer claims that updateall takes
      trove or changeset arguments. (CNY-1180)

  o Client changes;
    * Tag handler output is now redirected to a callback. The command line
      callback places "[ tag ]" in front of the output from each tag handler
      to help with debugging (CNY-906).

  o Internal changes:
    * Conary now supports being built against an internal copy of the
      sqlite3 library for cases when the system sqlite3 is not the
      optimal version for Conary.
    * The repository schema's string types are no longer restricted to
      arbitrary sizes for backends that support indexing larger strings
      than MySQL's InnoDB storage engine. (CNY-1054)

Changes in 1.0.40:
  o Build Changes:
    * All files in "binary directories" now provide their path as a
      file: dependency. This allows more flexibility for files that
      have requirements such as "file: /usr/bin/cp". (CNY-930)
    * A addRemoveRedirect() method has been added to the
      RedirectRecipe class to allow redirecting packages to nothing
      (which causes them to be erased on update). The client code has
      been updated to remove package components properly for this
      case.  (CNY-764)

  o Bug Fixes:
    * Config files, though added to the :config component by default
      (CNY-172), can now be appropriately overridden by
      ComponentSpec. (CNY-1107)
    * ELF files that have no DT_NEEDED or DT_SONAME entries no longer
      cause Conary to trace back attempting to discover the ELF
      ABI. (CNY-1072)
    * Conary will no longer attempt to update troves in the namespace
      "local" when using updateall.
    * Redirect recipes which contain conflicting redirects now give an