@@ -465,8 +465,9 @@ def cookRedirectObject(repos, db, cfg, recipeClass, sourceVersion, macros={},
 
     fullName = recipeClass.name
 
-    recipeObj = recipeClass(repos, cfg, sourceVersion.branch(), cfg.flavor, 
-                            macros)
+    # needed to take care of branched troves
+    binaryBranch = sourceVersion.getBinaryVersion().branch()
+    recipeObj = recipeClass(repos, cfg, binaryBranch, cfg.flavor, macros)
 
     use.track(True)
     _callSetup(cfg, recipeObj)
